# gitification

./: .env  .env.example  .eslintrc.cjs  .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  issue_template.md  pull_request_template.md
.github/actions/: constants.ts  env.d.ts  env.ts  outputTest.ts  release.ts  version.ts  versionCheck.ts
.github/workflows/: release.yml  test.yml  type-check.yml
actions/: release.ts
src/: App.vue  constants.ts  lib.css  main.ts  storage.ts  types.ts  vite-env.d.ts
src-tauri/: .gitignore  CHANGELOG.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  http.rs  main.rs  server.rs  utils.rs
src/api/: app.ts  constants.ts  notifications.ts  releases.ts  token.ts  user.ts
src/assets/: main.scss  mixins.scss
src/components/: AppButton.vue  AppContent.vue  AppScroller.vue  AppSidebar.vue  BottomBar.vue  BottomBarItem.vue  ContextMenu.vue  Dialog.vue  EmptyState.vue  HomePage.vue  Icons.ts  MenuItems.vue  NotificationItem.vue  NotificationList.vue  NotificationSkeleton.vue  PageHeader.vue  Popover.vue  PopoverContentInstallUpdate.vue  Separator.vue  SettingItem.vue  SettingsItem.vue  SettingsSilentHours.vue  SettingsSilentHoursAddButton.vue  SettingsSilentHoursItem.vue  Shared.ts  SidebarButton.vue  SlotRef.vue  Switch.vue  Tooltip.vue
src/composables/: useAppHooks.ts  useCommonCalls.ts  useContextMenu.ts  useCountDown.ts  useCustomHook.ts  useElementNavigation.ts  useFloatingEvent.ts  useFloatingVisibility.ts  useI18n.ts  useInterval.ts  useKey.ts  usePopoverControl.ts  useRoute.ts  useScrollElement.ts  useSlotWithRef.ts  useStorageRef.ts  useTargetWrapper.tsx  useTauriEvent.ts  useTheme.ts  useThreadsFetchManager.ts  useTimeoutPool.ts
src/directives/: contextmenu.ts  vEl.ts
src/gitification/: index.ts  namespace.ts  types.namespace.ts
src/gitification/actions/: index.ts
src/gitification/api/: index.ts  types.ts
src/gitification/constants/: index.ts
src/gitification/contextmenu/: index.ts
src/pages/: AddAccountPage.vue  HomePage.vue  LandingPage.vue  SettingsPage.vue  ThreadsPage.vue
src/stores/: contextmenu.ts  preview.ts  route.ts  routeStore.ts  store.ts
src/ui/: index.ts  namespace.ts
src/ui/Button/: Button.vue  (+1 more)
src/utils/: api.ts  array.ts  batch.ts  common.ts  date.ts  getNewRelease.ts  github.ts  initDevtools.ts  is.ts  notification.ts  url.ts  wowerlay.ts
src/views/: AboutView.vue  AddAccountView.vue  HomeView.vue  LandingView.vue  SettingsView.vue  index.ts  namespace.ts
(+37 files in other folders)
