[package]
name = "gitification"
version = "1.3.2"
description = "View github notifications on menubar"
authors = [ "Kadir Yazıcı" ]
license = ""
repository = ""
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "2", features = [ "macos-private-api", "tray-icon", "image-png", "image-ico"] }
window-vibrancy = "0.3.2"
tiny_http = "0.12.0"
ascii = "1.1.0"
rodio = "0.20.1"
tauri-plugin-store = "2"
tauri-plugin-autostart = { version = "2" }
port_scanner = "*"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[build]
target_dir = "./dist-tauri"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
